// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`path method operation differ does not emit a diff when known path has connection-specific method 1`] = `
Object {
  "context": undefined,
  "diffs": Array [],
  "error": undefined,
  "isDiff": true,
  "isMatch": false,
}
`;

exports[`path method operation differ does not emit a diff when known path has connection-specific method 2`] = `
Object {
  "context": undefined,
  "diffs": Array [],
  "error": undefined,
  "isDiff": true,
  "isMatch": false,
}
`;

exports[`path method operation differ does not emit a diff when known path has connection-specific method 3`] = `
Object {
  "context": undefined,
  "diffs": Array [],
  "error": undefined,
  "isDiff": true,
  "isMatch": false,
}
`;

exports[`path method operation differ does not emit a diff when known path has connection-specific method 4`] = `
Object {
  "context": undefined,
  "diffs": Array [],
  "error": undefined,
  "isDiff": true,
  "isMatch": false,
}
`;

exports[`path method operation differ emits a diff when known path has new method 1`] = `
Object {
  "context": undefined,
  "diffs": Array [
    Object {
      "method": "put",
      "path": "/example",
      "type": "UnmatchedMethod",
    },
  ],
  "error": undefined,
  "isDiff": true,
  "isMatch": false,
}
`;

exports[`path method operation differ matches a known path, and a known method 1`] = `
Object {
  "context": Object {
    "method": "get",
    "path": "/example",
    "pathParameterValues": Object {},
    "urlPath": "/example",
  },
  "diffs": undefined,
  "error": undefined,
  "isDiff": false,
  "isMatch": true,
}
`;
